# CornGame

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  CornGamePlan.md  DEVLOG.md  README.md  Todo.md  flake.nix  render-graph.dot  shell.nix
assets/: registry.json
assets/corn_model/: Corn.blend  Corn.blend1
assets/models/: Corn.glb  Corn.gltf  cornAll.gltf  cornLOD0.gltf  cornLOD1.gltf  cornLOD2.gltf  cornLOD3.gltf  cornLOD4.gltf  cornLOD5.gltf  corn_master.glb
assets/scenes/: player.glb
assets/shaders/: corn_data_defrag.wgsl  corn_data_init.wgsl  corn_init.wgsl  noise.wgsl  vote_scan_compact.wgsl
assets/shaders/bevy/: fragment.wgsl  prepass_vertex.wgsl  standard_vertex.wgsl
assets/shaders/corn/: corn_common.wgsl  defrag.wgsl  flag_stale.wgsl  image_init.wgsl  init.wgsl  instanced_vertex.wgsl  pbr_vertex.wgsl  prepass_instanced_vertex.wgsl  simple_init.wgsl  vote_scan_compact.wgsl
assets/shaders/corn/buffer_operation/: defrag.wgsl  flag_stale.wgsl  vote_scan_compact.wgsl
assets/shaders/corn/initialization/: image_init.wgsl  simple_init.wgsl
assets/shaders/corn/render/: fragment.wgsl  instanced_vertex.wgsl  prepass_instanced_vertex.wgsl  randomnormals.wgsl  vertex.wgsl  vertex_io.wgsl  vote_scan_compact.wgsl  wind.wgsl
assets/shaders/random/: noise.wgsl  rand_common.wgsl  simplex.wgsl
dev_resources/: Corn.blend
doc/: CornGamePlan.md  LOD.md  Roadmap.md  gameplay.md  network.md
doc/App Structure/: global.md  loading.md  user_stories.md
doc/blenderdev/: README.md  python-packages.nix  requirements.txt  shell.nix
shaders/corn/: corn_common.wgsl  scan_prepass.wgsl
shaders/corn/init/: simple_init.wgsl
shaders/corn/render/: instanced_vertex.wgsl  prepass.wgsl  prepass_instanced_vertex.wgsl  vertex.wgsl  wind.wgsl
src/: lib.rs  main.rs
src/app/: audio.rs  character.rs  console.rs  interactions.rs  mod.rs  network.rs  physics.rs  startup.rs  state.rs
src/app/character/: animation.rs  controller.rs  input.rs  mod.rs
src/app/gameplay/: character_controller.rs  mod.rs  npc.rs
src/app/level/: mod.rs
src/app/loading/: entity.rs  mod.rs  shader_imports.rs  state.rs
src/app/loading2/: entity.rs  old.rs  quad.rs
src/app/main_menu/: mod.rs
src/app/menu/: mod.rs
src/app/objects/: rocks.rs
src/app/ui/: console.rs  editor.rs  mod.rs
src/app/util/: button.rs  default_resources.rs  mod.rs
src/assets/: corn_model.rs  mod.rs
src/assets/shader_includes/: corn_common.wgsl  lod_count_override.wgsl  mod.rs
src/core/: mod.rs
src/core/gameplay/: framerate.rs  mod.rs
src/core/loading/: mod.rs  setup_scene_plugin.rs
src/ecs/: cameras.rs  flycam.rs  framerate.rs  loading.rs  main_camera.rs  mod.rs  test_cube.rs
src/ecs/corn/: asset.rs  buffer.rs  mesh.rs  mod.rs  render.rs  shader.rs  todo.md
src/ecs/corn/asset/: mod.rs  processing.rs  todo.md
src/ecs/corn/data_pipeline/: mod.rs  operation_executor.rs  operation_manager.rs  todo.md
src/ecs/corn/field/: cf_image_carved.rs  cf_simple.rs  mod.rs  state.rs
src/ecs/corn/init/: mod.rs  shader.rs  simple.rs
src/ecs/corn/render/: mod.rs  render.rs  scan_prepass.rs  todo.md
src/ecs/corn/scan_prepass/: mod.rs  vote.rs
src/ecs/corn_field/: data_pipeline.rs  data_pipeline_old.rs  init.rs  mod.rs  render.rs  scan_prepass.rs
src/ecs/corn_field/corn_fields/: image_carved_corn_field.rs  mod.rs  (+1 more)
src/flycam/: cam_look_plugin.rs  cam_move_plugin.rs  mod.rs
src/scenes/: mod.rs
src/scenes/lobby/: mod.rs
src/scenes/main_menu/: credits.rs  mod.rs  options.rs  title.rs
src/state/: mod.rs
src/state/lobby/: mod.rs
src/state/main_menu/: credits.rs  mod.rs  options.rs  title.rs
src/systems/: audio.rs  interactions.rs  mod.rs  network.md  network.rs  physics.rs  scenes.rs
src/systems/character/: animation.rs  controller.rs  mod.rs  npc.rs
src/systems/gameplay/: state.rs
src/systems/loading2/: mod.rs
src/systems/main_menu/: load.rs
src/systems/menu/: mod.rs
src/systems/ui/: console.rs  editor.rs  shell.rs
src/systems/util/: button.rs  camera.rs  default_resources.rs  mod.rs
src/util/: clone_entity.rs  debug_app.rs  integer_set.rs  math.rs  mod.rs  observer_ext.rs  scene_set.rs  specialized_material.rs  state_set.rs
src/util/asset_io/: image_io.rs  mesh_io.rs  mod.rs  standard_material_io.rs
(+6 files in other folders)
