[package]
name = "corn_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", default-features = true, features=["dynamic_linking", "asset_processor", "file_watcher", "embedded_watcher"]}
rand = "0.9.0"
bytemuck = "1.22.0"
futures-lite = "2.6.0"
wgpu = "0.20.0"
bevy_rapier3d = "0.29.0"
image = "0.25.5"
ordermap = "0.5.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
